--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,12 +1,12 @@
-<h1> All Available Products</h1>
-
-<%= link_to "Add New Product", "/products/new" %>
-
-<% @products.each do |product| %>
+<div class="row">
+  <% @products.each do |product| %>
+<div class="col-md-4">
   <h2><%= link_to product.name, "/products/#{product.id}" %></h2>
   <h3><%= product.price %></h3>
-  <h4><%= product.image %></h4>
   <h4><%= product.description %></h4>
+  <%= image_tag product.image, width: 300, class: "product-image" %>
   <hr>
-<% end %>
 
+  </div>
+  <% end %>
+</div>
