--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @product.name %></h1>
 <h2><%= @product.price %></h2>
-<img src="<%= @product.image %>">
+<%= image_tag @product.image %>
 <h3><%= @product.description %></h3>
 <%= link_to "Edit", "/products/#{@product.id}/edit" %>
 <%= link_to "Delete", "/products/#{@product.id}",method: :delete %>
