--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
 </head>
 <body>
 
@@ -45,8 +46,10 @@
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="/products?discount=true">$10 or Less!</a></li>
+      <ul class="nav navbar-nav navbar-right"> 
+        <li><%= link_to "Sign In", "/users/sign_in" if current_user == nil %></li>
+        <li><%= link_to "Sign Up", "/users/sign_up" if current_user == nil %></li>
+        <li><%= link_to "Sign Out", "/users/sign_out", method: :delete if current_user %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
