--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,22 +1,34 @@
-<h1>Add a new product</h1>
+ <section>
+      <div class="row">
+        <div class="col-sm-9">
+          <div class="product_single">
+            <h1>Create a new product:</h1>
 
-<%= form_tag '/products', method: :post do %>
-  <div>
-    <%= label_tag :name %>
-    <%= text_field_tag :name %>
-  </div>
-  <div>
-    <%= label_tag :price %>
-    <%= text_field_tag :price %>
-  </div>
-  <div>
-    <%= label_tag :image %>
-    <%= text_field_tag :image %>
-  </div>
-  <div>
-    <%= label_tag :description %>
-    <%= text_field_tag :description %>
-  </div>
-  <%= submit_tag "Add Product" %>
+            <%= form_tag '/products', method: :post do %>
 
-<% end %>
+            <div>
+              <%= label_tag :name %>
+              <%= text_field_tag :name %>
+            </div>
+            <div>
+              <%= label_tag :price %>
+              <%= text_field_tag :price %>
+            </div>
+            <div>
+              <%= label_tag :image %>
+              <%= text_field_tag :image %>
+            </div>
+            <div>
+              <%= label_tag :description %>
+              <%= text_field_tag :description %>
+            </div>
+            <div>
+              <%= label_tag :rating %>
+              <%= text_field_tag :rating %>
+            </div>
+            <%= submit_tag "Add Product" %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </section>
