--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,34 @@
-<h1><%= @product.name %></h1>
-<h2><%= @product.price %></h2>
-<%= image_tag @product.image %>
-<h3><%= @product.description %></h3>
-<%= link_to "Edit", "/products/#{@product.id}/edit" %>
-<%= link_to "Delete", "/products/#{@product.id}",method: :delete %>
+  <section>
+    <div class="row">    
+      <div class="col-sm-9">
+        <div class="taco_single">
+            <h2><%= @product.name %></h2>
+            <p>Price: <%= @product.price %></p>
+            <p>Brought to you by: <%= @product.supplier.name %></p>
+            <img src="<%= @product.image %>" alt="<%= @product.name %>" class="img-responsive">
+            <p>Description: <%= @product.description %></p>
+            <p>Rating: <span class="rating"><%= @product.rating %></span></p>
+            <%= link_to "Edit", "/products/#{@product.id}/edit", class: "btn btn-success" %>
+            <%= link_to "Delete", "/products/#{@product.id}", {method: :delete, class: "btn btn-danger" }%>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <%= form_tag "/orders", method: :post do %>
+      <div>
+        <%= label_tag :quantity %>
+        <%= text_field_tag :quantity %>
+      </div>
+      <div>
+        <%= hidden_field_tag :product_id, @product.id %>
+      </div>
+      <div>
+        <%= submit_tag "Buy Now!" %>
+      </div>
+    <% end %>
+  </section>
+
+
 
