--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,9 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-
 </head>
 <body>
+
 
 <nav class="navbar navbar-default">
   <div class="container-fluid">
@@ -68,13 +68,14 @@
 <form_tag>
 
 
-  <div class="container-fluid">
-
-  <% flash.each do |name, message| %>
-  <p><%= message %></p>
+<div class="container-fluid">
+<% flash.each do |name, message| %>
+  <div class="alert alert-<%= name %> alert-dismissible" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button><p><%= message %></p>
+  </div>
   <% end %>
-
-  <%= yield %>
+<%= yield %>
+</div>
 
 </body>
 </html>
